tests/toy/neg/000932_mutation.toylang
program a = { if a int sleep; } .
